base / login page updates
added some more styling to the login page and updated the index to use
the base template. also added in some favicons for the site to load.

--- a/frontend/templates/pages/base.html
+++ b/frontend/templates/pages/base.html
@@ -3,10 +3,16 @@
 <head>
     <title>TJ2 - {% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="/assets/stylesheet.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="manifest" href="/assets/site.webmanifest">
     <script src="/assets/html.min.js"></script>
     {% block head %}{% endblock head %}
 </head>
 <body>
-    {% block body %}{% endblock body %}
+    <main class="w-screen h-screen">
+        {% block body %}{% endblock body %}
+    </main>
 </body>
 </html>
