--- a/frontend/templates/pages/index.html
+++ b/frontend/templates/pages/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Main page</title>
-        <link rel="stylesheet" href="/assets/stylesheet.css"/>
-        <script src="/assets/htmx.min.js"></script>
-    </head>
-    <body>
-        <h1>MAIN PAGE</h1>
-    </body>
-</html>
+{% extends "pages/base" %}
+
+{% block title %}Dashboard{% endblock title %}
+{% block body %}
+    <h1>Dashboard</h1>
+{% endblock body %}
