initiator login updates
added in a macro to attempt to retrieve the initiator and return an
error or response depending on the result of the lookup.

updated the login page to allow for redirecting to a previous location
if one is provided.

--- a/frontend/templates/pages/login.html
+++ b/frontend/templates/pages/login.html
@@ -2,8 +2,8 @@
 
 {% block title %}Login{% endblock title %}
 {% block body %}
-<div class="w-full h-full">
-    <form action="/login" method="post" class="mx-auto my-auto">
+<div class="flex w-full h-full">
+    <form action="{{post_url}}" method="post" class="mx-auto my-auto">
         <div>
             <div>
                 {{ self::input(id="username", name="username", title="Username") }}
