--- a/frontend/templates/pages/index.html
+++ b/frontend/templates/pages/index.html
@@ -3,4 +3,7 @@
 {% block title %}Dashboard{% endblock title %}
 {% block body %}
     <h1>Dashboard</h1>
+    <form action="/logout" method="post">
+        <button type="submit">Logout</button>
+    </form>
 {% endblock body %}
