--- a/frontend/templates/pages/base.html
+++ b/frontend/templates/pages/base.html
@@ -7,11 +7,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
     <link rel="manifest" href="/assets/site.webmanifest">
-    <script src="/assets/html.min.js"></script>
+    <script src="/assets/htmx.min.js"></script>
     {% block head %}{% endblock head %}
 </head>
 <body>
-    <main class="w-screen h-screen">
+    <main class="relative w-screen h-screen">
         {% block body %}{% endblock body %}
     </main>
 </body>
