--- a/frontend/templates/pages/main_wrapper.html
+++ b/frontend/templates/pages/main_wrapper.html
@@ -8,6 +8,12 @@
                 <button type="submit">Logout</button>
             </form>
         </div>
+        <div>
+            <a href="/entries/new">New Entry</a>
+        </div>
+        <div>
+            <a href="/entries">Entries</a>
+        </div>
     </nav>
     <main class="relative flex-auto overflow-scroll">
         {% block main %}{% endblock main %}
