--- a/frontend/templates/pages/entries.html
+++ b/frontend/templates/pages/entries.html
@@ -7,6 +7,7 @@
     <thead>
         <tr class="sticky top-0 bg-white">
             <th>Date</th>
+            <th>Title</th>
             <th>Tags</th>
             <th>Mod</th>
         </tr>
@@ -14,7 +15,10 @@
     <tbody>
         {% for entry in entries %}
         <tr>
-            <td>{{entry.date}}</td>
+            <td>
+                <a href="/entries/{{entry.date}}">{{entry.date}}</a>
+            </td>
+            <td>{{entry.title}}</td>
             <td>
                 {% for key, value in entry.tags %}
                 {{key}}
