--- a/frontend/templates/pages/spa.html
+++ b/frontend/templates/pages/spa.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
     <link rel="manifest" href="/assets/site.webmanifest">
+    <!--<link rel="stylesheet" href="/assets/react-day-picker.css"/>-->
     <link rel="stylesheet" href="/assets/stylesheet.css"/>
     <script src="/assets/index.js"></script>
 </head>
