--- a/frontend/templates/pages/spa.html
+++ b/frontend/templates/pages/spa.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/assets/site.webmanifest">
     <!--<link rel="stylesheet" href="/assets/react-day-picker.css"/>-->
     <link rel="stylesheet" href="/assets/stylesheet.css"/>
-    <script src="/assets/index.js"></script>
+    <script src="/assets/index.js" type=module></script>
 </head>
 <body>
     <div id="root" class="relative w-screen h-screen"></div>
