mfa recover front-end #15
added in the UI for enabling and disabling recovery codes for a user and
also to use a recovery code doring login when doing the MFA step.

started working on how to manage errors for the interface and updated
the auth page to use them. now some amount of errors will be displayed
to the user if someting goes wrong.

--- a/frontend/templates/pages/spa.html
+++ b/frontend/templates/pages/spa.html
@@ -15,5 +15,6 @@
 </head>
 <body>
     <div id="root" class="relative w-screen h-screen"></div>
+    <div id="dialog-portal"></div>
 </body>
 </html>
