--- a/frontend/templates/pages/spa.html
+++ b/frontend/templates/pages/spa.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/favicon-16x16.png">
+    <link rel="manifest" href="/static/site.webmanifest">
     <!--<link rel="stylesheet" href="/assets/react-day-picker.css"/>-->
-    <link rel="stylesheet" href="/assets/stylesheet.css"/>
-    <script src="/assets/js/runtime.bundle.js"></script>
-    <script src="/assets/js/react.bundle.js"></script>
-    <script src="/assets/js/radix.bundle.js"></script>
-    <script src="/assets/js/vendor.bundle.js"></script>
-    <script src="/assets/js/index.bundle.js"></script>
+    <link rel="stylesheet" href="/static/index.bundle.css"/>
+    <script src="/static/runtime.bundle.js"></script>
+    <script src="/static/react.bundle.js"></script>
+    <script src="/static/radix.bundle.js"></script>
+    <script src="/static/vendor.bundle.js"></script>
+    <script src="/static/index.bundle.js"></script>
 </head>
 <body>
     <div id="root" class="relative w-screen h-screen"></div>
